--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "simple-peer": "^9.9.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.9",
+    "@types/simple-peer": "^9.6.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
