--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@solana/web3.js": "^0.87.1",
+    "bn.js": "^5.1.3",
     "core-js": "^3.6.5",
     "simple-peer": "^9.9.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@types/bn.js": "^4.11.6",
     "@types/node": "^14.14.9",
     "@types/simple-peer": "^9.6.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
