--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   },
   "dependencies": {
     "@solana/web3.js": "^0.87.1",
+    "bip32": "^2.0.6",
+    "bip39": "^3.0.3",
     "bn.js": "^5.1.3",
+    "bs58": "^4.0.1",
     "core-js": "^3.6.5",
     "simple-peer": "^9.9.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
+    "@types/bs58": "^4.0.1",
     "@types/node": "^14.14.9",
     "@types/simple-peer": "^9.6.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
