--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@solana/web3.js": "^0.87.1",
+    "autoprefixer": "^9.8.6",
     "bip32": "^2.0.6",
     "bip39": "^3.0.3",
     "bn.js": "^5.1.3",
     "bs58": "^4.0.1",
     "core-js": "^3.6.5",
+    "postcss": "^7.0.35",
     "simple-peer": "^9.9.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^3.0.0"
   },
   "devDependencies": {
