--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bs58": "^4.0.1",
     "core-js": "^3.6.5",
     "simple-peer": "^9.9.3",
+    "tweetnacl": "^1.0.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
