--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bip39": "^3.0.3",
     "bn.js": "^5.1.3",
     "bs58": "^4.0.1",
+    "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.5",
     "postcss": "^7.0.35",
     "simple-peer": "^9.9.3",
